# basil

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  TODO.md  commands.py  dummy_grammar.txt  grammar_grammar.txt  pyproject.toml  run_grammar_parser.py  run_new_parser.py  run_parser_generator.py
.github/workflows/: workflow.yml
basil/: error_collector.py  exceptions.py  file_parser.py  parser.py  syntax_loader.py
basil/syntax_loader/: syntax_loader.py
examples/: json_grammar.txt  json_parser.py
parser/: commands.py  exceptions.py  file_parser.py  generic.py  grammar.py  grammar_generator.py  grammar_parser.py  new_parser.py  parser.py  parser_generator.py  py.typed  syntax_loader.py  tokenizer.py  tree.py
parser/grammar/: grammar.txt  new_parser.py  parser.py
parser/parser/: exceptions.py  models.py  parser.py
parser/parser_generator/: exceptions.py  models.py  parser_generator.py
parser/tokenizer/: exceptions.py  models.py  tokenizer.py
tests/: test_exceptions.py  test_generic.py  test_grammar.py  test_grammar_parser.py  test_models.py  test_parser.py  test_parser_generator.py  test_syntax_loader.py  test_tokenizer.py  test_tree.py
tests/examples/: test_json_parser.py
tests/grammar/: test_grammar.py  test_parser.py
tests/json_parser/: __init__.py  syntax.json  test_error_collector.py  test_json_parser.py  test_json_parser_transformed.py  test_parser.py
tests/parser/: test_parser.py
tests/parser_generator/: test_parser_generator.py
tests/tokenizer/: test_tokenizer.py
