[tool.poetry]
name = "parser"
version = "0.1.0"
description = ""
authors = ["Luuk Verweij <luuk_verweij@msn.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
