[tool.poetry]
name = "parser"
version = "0.2.1"
description = ""
authors = ["Luuk Verweij <luuk_verweij@msn.com>"]
license = "BSD"
packages = [
    { include = "parser" }
]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.1.0"

[tool.poetry.dev-dependencies]
pdbpp = "^0.10.3"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
pre-commit = "^2.17.0"

[tool.poetry.scripts]
generate_parser = 'commands:generate_parser_command'
check_parser_staleness = 'commands:check_parser_staleness_command'


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
